--- a/app/signup/page.module.css
+++ b/app/signup/page.module.css
@@ -10,28 +10,19 @@
   width: 70%;
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
-.passwordSection {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
+.inputSection:last-of-type button {
+  margin-top: 16px;
 }
 
-.passwordSection .forgotPassword {
-  font-size: 14px;
-  color: #fff;
-  text-align: right;
-}
-
-.signUp {
+.login {
   color: #fff;
   font-size: 14px;
   text-align: center;
 }
 
-.signUp a {
+.login a {
   font-size: 16px;
   color: #e05252;
 }
