--- a/app/details/page.module.css
+++ b/app/details/page.module.css
@@ -65,3 +65,15 @@
   margin-top: 64px;
   margin-bottom: 48px;
 }
+
+.video {
+  border: 0;
+  border-radius: 8px;
+}
+
+.videoWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 128px;
+}
