--- a/app/admin/page.module.css
+++ b/app/admin/page.module.css
@@ -29,7 +29,7 @@
   border-radius: 8px;
   border: 1px solid #313131;
   table-layout: fixed;
-  margin: 0 auto;
+  margin: 64px auto;
 }
 
 .data {
